Remove exports options from post Java 8 profile.
We should not need it anymore.
Possibility to add options still left in pom for future test experiments.